[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/PowerConsumerFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/power_consumers/PowerConsumer.gd" type="Script" id=2]
[ext_resource path="res://fonts/LcdSolid112.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.564706, 0.564706, 0.564706, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
extra_spacing_bottom = -10
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -983.0
rect_min_size = Vector2( 1920, 97 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
consumer_name = "portable_heater"
label = "Portable heater"
power_usage = 100.0
is_item = true
energy = 500.0
energy_capacity = 1000.0

[node name="Energy" type="ProgressBar" parent="."]
margin_right = 1417.0
margin_bottom = 97.0
rect_min_size = Vector2( 1417, 97 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 1000.0
step = 0.0
value = 500.0
allow_greater = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_right = -284.0
margin_bottom = 97.0
rect_min_size = Vector2( 1920, 0 )
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBox"]
margin_top = 3.0
margin_right = 1199.0
margin_bottom = 94.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Portable heater"

[node name="Energy" type="Label" parent="HBox"]
margin_left = 1231.0
margin_top = 6.0
margin_right = 1417.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "500W/
1000W "
align = 2

[node name="PowerUsage" type="Label" parent="HBox"]
margin_left = 1449.0
margin_top = 3.0
margin_right = 1693.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.5, 0.5, 0.5, 1 )
text = "100W"
align = 2

[node name="PowerState" type="Button" parent="HBox"]
margin_left = 1725.0
margin_right = 1920.0
margin_bottom = 97.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
action_mode = 0
text = "OFF"
flat = true
align = 2

[connection signal="pressed" from="HBox/PowerState" to="." method="_on_PowerState_pressed"]
